--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,10 +8,17 @@
     font-family: "Open Sans", sans-serif;
 }
 
+main {
+    padding: 0 12px;
+}
+
 /* Heading Fonts */
 .heading {
     font-family: "Poppins", sans-serif;
     font-weight: 600;
+    font-size: 24px;
+    text-transform: capitalize;
+    line-height: 1.4;
 }
 
 /* COLORS: Text colors */
@@ -44,20 +51,35 @@
 
 /* Navbar Styles */
 
-nav.navbar {
-    align-items: center;
-}
-
 .navbar-brand img {
     width: 100px;
 }
 
 .navbar .btn.nav-btn {
-   box-shadow: 0px 0px 4px 4px hsl(192, 100%, 96%); 
-   border: none;
-   border-radius: 20px;
-   padding: 4px 16px;
-   font-size: 14px;
-   font-weight: bold;
-   color: hsl(192, 100%, 9%);
+    box-shadow: 0px 0px 4px 4px hsl(192, 100%, 96%);
+    border: none;
+    border-radius: 20px;
+    padding: 4px 16px;
+    font-size: 14px;
+    font-weight: bold;
+    color: hsl(192, 100%, 9%);
+}
+
+/* Layout Styles */
+
+.section-content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+}
+
+.btn.cta-btn {
+    border: none;
+    border-radius: 24px;
+    padding: 12px 16px;
+    font-size: 14px;
+    font-weight: bold;
+    width: 220px;
+    font-size: 14px;
 }
