--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -66,7 +66,6 @@ main {
 }
 
 /* Layout Styles */
-
 .section-content {
     display: flex;
     flex-direction: column;
@@ -82,4 +81,12 @@ main {
     font-weight: bold;
     width: 220px;
     font-size: 14px;
+}
+
+/* Landing Page */
+section.landing-page {
+    background-image: url("../images/bg-hero-mobile.svg");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
