Finish main content with styles, add classes to paragraphs for color

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -49,6 +49,15 @@ main {
     background-color: hsl(192, 100%, 9%);
 }
 
+/* Order for images on mobile screens */
+.grow-together .section-image,
+.flowing-conversations .section-image,
+.your-users .section-image {
+    order: -1;
+}
+
+/* Paragraph styles for all sections */
+
 /* Navbar Styles */
 
 .navbar-brand img {
@@ -66,6 +75,9 @@ main {
 }
 
 /* Layout Styles */
+section {
+    margin-bottom: 100px;
+}
 .section-content {
     display: flex;
     flex-direction: column;
@@ -89,10 +101,4 @@ section.landing-page {
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-}
-
-/* Grow Together Section */
-.grow-together .section-image {
-    order: -1;
-    margin-top: 100px;
 }
